made more general for users

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         <h1 class="mb-0">Kevin
           <span class="text-primary">Apodaca</span>
         </h1>
-        <div class="subheading mb-5">(915) 701-6665 ·
-          <a href="mailto:kevin.apodaca7@gmail.com">kevin.apodaca7@gmail.com</a>
+        <div class="subheading mb-5">Your phone number here·
+          <a href="mailto:email@email">Your email here</a>
         </div>
-        <p class="lead mb-5">Hello! I’m Kevin Apodaca. I am a computer science student at the University of Texas at El Paso with a focus on Software Development. I am interested in Machine Learning, Mathematics, and Data Analytics.</p>
+        <p class="lead mb-5">Hello! This is the description of the website that you are going to be changing.</p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
@@ -94,22 +94,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Instructional Assistant</h3>
-            <div class="subheading mb-3">Computer Science Department, University of Texas at El Paso</div>
-            <p>Assisted a class of 30 students in developing web interfaces with databases for projects based on client requirements.</p>
-            <p>Developed programming assignments to test student comprehension, including use of mySQL, PHP, and database modeling</p>
+            <h3 class="mb-0">The the most relevant job</h3>
+            <div class="subheading mb-3">The company that you worked with</div>
+            <p>What you did part one</p>
+            <p>What you did part two</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Jan 2020 - Present</span>
+            <span class="text-primary">Start Time - End Time</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer & Designer</h3>
-            <div class="subheading mb-3">Learning Environments, Univeristy of Texas at El Paso</div>
-            <p>Co-developed an iOS scheduling application in Swift, for student faculty to create their work schedules.</p>
-            <p>Developed two interactive and dynamic websites that displayed available resources, events, and information about UTEP's makerspace and Undergraduate Learning Center building.</p>
+            <h3 class="mb-0">The other relevant job</h3>
+            <div class="subheading mb-3">Department that you worked with</div>
+            <p>Stuff that I did here.</p>
+            <p>Another cool thing that I did at this company.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Nov 2018 - Present</span>
@@ -129,19 +129,19 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Texas at El Paso</h3>
+            <h3 class="mb-0">University of Texas at Austin</h3>
             <div class="subheading mb-3">Bachelor of Science in Computer Science</div>
-            <div>Computer Science Major | Mathematics Minor</div>
-            <p>GPA: 3.90/4.0</p>
+            <div>Your major here | Your minor here</div>
+            <p>GPA: 4.0/4.0</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Expected December 2020</span>
+            <span class="text-primary">Graduation time</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">El Dorado High School</h3>
+            <h3 class="mb-0">Secondary education</h3>
             <div class="subheading mb-3">Top 10% Graduating Class</div>
             <p>Stuff I did 1</p>
             <p>Stuff I did 2</p>
@@ -207,13 +207,13 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Dean's List for seven consecutive semesters (2016 to present).</li>
+            Best person of the year.</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Received Miner Grant Scholarship which is awarded to promising students.</li>
+            The presidential scholarship of awesomeness</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Awarded STAARS Scholarship three consecutive semesters.</li>
+            The MIT award for super cool people.</li>
         </ul>
       </div>
     </section>
